# Books-List-CRUD

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: python-app.yml
