[tool.poetry]
name = "books-list-crud"
version = "0.1.0"
description = "Books List CRUD API"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
pydantic = ">=2.0.0"
uvicorn = ">=0.20.0"
httpx = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"